# mirai

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  renovate.json
.github/workflows/: build-bin.yaml  build.yaml  release.yaml  test-bin.yaml  test.yaml
migrations/: V1__initial.sql
nix/: home-manager.nix  package.nix
src/: config.rs  log.rs  main.rs  store.rs  wallpaper.rs
src/backends/: mod.rs  swww_cli.rs  windows.rs
src/content_managers/: git.rs  local.rs  mod.rs
