[package]
name = "mirai"
version = "0.4.0"
edition = "2024"

[dependencies]
sea-query-rusqlite = { version = "0.7", features = [
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
] }
sea-query = { version = "0.32.7" }
chrono = { version = "0.4" }
directories = "6.0.0"
once_cell = "1.21.4"
rand = "0.10.0"
rusqlite = { version = "0.39.0", features = [
    "bundled",
    "rusqlite-macros",
    "chrono",
] }
serde = { version = "1.0.228", features = ["derive"] }
# swww-common = { git = "https://github.com/LGFae/swww.git", package = "common" }
thiserror = "2.0.18"
toml = "1.1.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
refinery = { version = "0.9.0", features = ["rusqlite-bundled"] }
clap = { version = "4.6.0", features = ["derive"] }
auto-launch = "0.6.0"
which = "8.0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.56"
